--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header-content">
             <h1>Organize Your Notes Easily</h1>
             <p>Capture and organize your ideas anywhere, anytime.</p>
-           <a href="./form/login.html"><button class="btn get-start">Get Started</button></a>
+           <a href="./pages/form.html"><button class="btn get-start">Get Started</button></a>
         </div>
     </header>
 
