--- a/pages/form.html
+++ b/pages/form.html
@@ -6,7 +6,7 @@
   <title>RenderWonders Design</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="../js/form.js" defer></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/form.css">
 
 </head>
 <body>
@@ -31,9 +31,9 @@
     </div>
 
     <div class="right-section">
-      <h2>AI Revolutionizing the way we create, render, and experience content.</h2>
-      <p>Create design briefs with AI voice commands to make awesome 3D images that suit your needs.</p>
-      <button class="creating-btn">Creating</button>
+      <h2>Revolutionizing the way we capture, organize, and share ideas.</h2>
+      <p>Create detailed notes effortlessly with a modern note-taking app tailored to your needs. Use voice commands to generate, edit, and organize your notes seamlessly.</p>
+      <button class="creating-btn">Take note</button>
     </div>
   </div>
 </body>
