--- a/pages/form.html
+++ b/pages/form.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RenderWonders Design</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <script src="../js/form.js" defer></script>
   <link rel="stylesheet" href="../css/form.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ 
 </head>
 <body>
   <div class="container">
@@ -33,8 +33,10 @@
     <div class="right-section">
       <h2>Revolutionizing the way we capture, organize, and share ideas.</h2>
       <p>Create detailed notes effortlessly with a modern note-taking app tailored to your needs. Use voice commands to generate, edit, and organize your notes seamlessly.</p>
-      <button class="creating-btn">Take note</button>
     </div>
   </div>
+  
+  <script src="../js/form.js" defer></script>
+ 
 </body>
 </html>
