I have update logo and change the right-section picture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <div class="imglogo">
 
-        <img src="https://pfst.cf2.poecdn.net/base/image/32691d7703105ff33926f1fdf16a98e9f1e13d6d7bcc48efde9e7a7a699f7a9f?w=1024&h=768&pmaid=261982371" alt="">
+        <img src="./images/logo.jpg " alt="">
         <div class="logo">Note Taker</div>
       </div>
         <div class="nav-links">
