--- a/pages/form.html
+++ b/pages/form.html
@@ -33,7 +33,7 @@
     <div class="right-section">
       <h2>Revolutionizing the way we capture, organize, and share ideas.</h2>
       <p>Create detailed notes effortlessly with a modern note-taking app tailored to your needs. Use voice commands to generate, edit, and organize your notes seamlessly.</p>
-    </div>
+     <button id="takenote"> <b>Take Note </b>  </button>     
   </div>
   
   <script src="../js/form.js" defer></script>
