change data of user to store in firbase for realtime and local for off line

--- a/pages/form.html
+++ b/pages/form.html
@@ -8,13 +8,16 @@
   <link rel="stylesheet" href="../css/form.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- 
+  <!-- Firebase JS SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-database-compat.js"></script>
 </head>
+ 
 <body>
   <div class="container">
     <div class="form-section">
-      <h1>Welcome to RenderWonders</h1>
-      <p>Gaze and attention modeling powered by AI is optimizing virtual reality experiences.</p>
+      <h1>Welcome to Note Taker</h1>
+      <p>This note can help you to note whatever you want. Please login!</p>
       <form id="signup-form">
         <div class="form-group">
           <i class="fas fa-envelope"></i>
@@ -34,10 +37,12 @@
     <div class="right-section">
       <h2>Revolutionizing the way we capture, organize, and share ideas.</h2>
       <p>Create detailed notes effortlessly with a modern note-taking app tailored to your needs. Use voice commands to generate, edit, and organize your notes seamlessly.</p>
-     <button id="takenote"> <b>Take Note </b>  </button>     
+      <button id="takenote"><b>Take Note</b></button>
+    </div>
   </div>
-  
-  <script src="../js/form.js" defer></script>
+
+  <script type="module" src="../js/form.js"></script>
+
  
 </body>
 </html>
